--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row-span-1">
                 <h2 class="text-yellow-900 text-4xl flex justify-center"> Dzikie rzeczy </h2>
             </div>
-            <div class="row-span-3">
+            <div class="row-span-2">
                 <h1 class="text-yellow-900 text-2xl flex justify-center"> Naszło mnie pytanie: </h1>
                 <div class="text-blue-100 text-lg flex justify-center">
                     <form class="flex flex-col gap-2">
@@ -68,6 +68,9 @@
             <div class="row-span-1">
                 <label for="Mama">Progress przekonywania mamy do wpuszczenia dzika do domu:</label>
                 <progress id="Mama" max="100" value="70">70%</progress>
+            </div>
+            <div class="row-span-1">
+                <a href="form.html" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Quiz o dziku dla anglojęzycznych chojraków</a>
             </div>
         </div>
         <div class="col-span-3 row-span-1 grid grid-cols-2 grid-flow-row">
