--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <h1 class="text-4xl d-flex justify-content-center"> Quiz about my boar </h1>
     <div class="container overflow-hidden">
         <form>
-            <div class="row">
+            <div class="row py-2">
                 <div class="form-group col-sm-6">
                     <label for="name">What's my boar's name?</label>
                     <input class="form-control" id="name" placeholder="Your answer" required>
@@ -18,7 +18,7 @@
                     <input class="form-control" id="surname" placeholder="Your answer" required>
                 </div>
             </div>
-            <div class="row-md">
+            <div class="row-md py-2">
                 <label for="meeting"> Where have i met my boar?</label>
                 <select class="form-select" id="meeting" aria-label="Default select example" required>
                     <option selected>Select</option>
@@ -27,7 +27,7 @@
                     <option value="3">Work related meeting</option>
                 </select>
             </div>
-            <div class="row">
+            <div class="row py-2">
                 <div class="col-md-6">
                     <label for="looks"> How big are his ears? </label>
                     <select class="form-select" id="looks" aria-label="Default select example" required>
@@ -47,7 +47,7 @@
                     </select>
                 </div>
             </div>
-            <div class="row-md">
+            <div class="row-md py-2">
                 <label for="big"> How big is my boar?</label>
                 <div class="form-check" id="big">
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
